[gd_scene load_steps=2 format=2]

[ext_resource path="res://telas/configuracoes.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="config" type="Label" parent="."]
margin_left = 433.0
margin_top = 106.0
margin_right = 522.0
margin_bottom = 137.0
text = "Configuracoes
"

[node name="ok" type="Button" parent="."]
margin_left = 467.0
margin_top = 363.0
margin_right = 494.0
margin_bottom = 383.0
text = "ok"

[node name="VolumeMusica" type="HSlider" parent="."]
margin_left = 374.0
margin_top = 230.0
margin_right = 574.0
margin_bottom = 246.0
max_value = 30.0
step = 0.5
value = 15.0

[node name="VolumeEfeitos" type="HSlider" parent="."]
margin_left = 382.0
margin_top = 298.0
margin_right = 582.0
margin_bottom = 314.0
max_value = 30.0
step = 0.5
value = 15.0

[node name="musicalbl" type="Label" parent="."]
margin_left = 434.0
margin_top = 186.0
margin_right = 474.0
margin_bottom = 200.0
text = "volume musica
"

[node name="Label" type="Label" parent="."]
margin_left = 435.0
margin_top = 260.0
margin_right = 531.0
margin_bottom = 291.0
text = "volume efeitos
"

[node name="sair" type="Button" parent="."]
margin_left = 23.0
margin_top = 21.0
margin_right = 58.0
margin_bottom = 41.0
text = "sair"

[connection signal="pressed" from="ok" to="." method="_on_ok_pressed"]
[connection signal="changed" from="VolumeMusica" to="." method="_on_VolumeMusica_changed"]
[connection signal="drag_ended" from="VolumeMusica" to="." method="_on_VolumeMusica_drag_ended"]
[connection signal="changed" from="VolumeEfeitos" to="." method="_on_Volume_efeitos_changed"]
[connection signal="drag_ended" from="VolumeEfeitos" to="." method="_on_VolumeEfeitos_drag_ended"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
